# src/docs/openApi.yaml
@@ -26,7 +26,7 @@ paths:
         500:
           description: Server error.
 
-  /auth/login:
+  /api/auth/login:
     post:
       tags:
         - Auth
@@ -42,6 +42,21 @@ paths:
           description: Token created.
         401:
           description: Invalid credentials.
+        500:
+          description: Server error.
+
+  /api/users/list:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - Users
+      summary: List all users (administrator rights are required)
+      responses:
+        200:
+          description: Succes.
+        403:
+          description: Insufficient permissions
         500:
           description: Server error.
 
